--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "mphung97",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel src/index.html -p 3000",
+    "start": "parcel src/index.html -p 3000",
     "build": "parcel build src/index.html"
   },
   "dependencies": {
